tests/ui/where-clauses/self-in-where-clause-allowed.stderr
error[E0277]: the trait bound `dyn Trait: UnsafeTrait` is not satisfied
  --> $DIR/self-in-where-clause-allowed.rs:28:18
   |
LL |     trait_object.unsafe_trait_bound();
   |                  ^^^^^^^^^^^^^^^^^^ the trait `UnsafeTrait` is not implemented for `dyn Trait`
   |
note: required by a bound in `Trait::unsafe_trait_bound`
  --> $DIR/self-in-where-clause-allowed.rs:17:46
   |
LL |     fn unsafe_trait_bound(&self) where Self: UnsafeTrait {}
   |                                              ^^^^^^^^^^^ required by this bound in `Trait::unsafe_trait_bound`

error[E0277]: the trait bound `dyn Trait: AutoTrait` is not satisfied
  --> $DIR/self-in-where-clause-allowed.rs:29:18
   |
LL |     trait_object.nonlocal_autotrait_bound();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AutoTrait` is not implemented for `dyn Trait`
   |
note: required by a bound in `Trait::nonlocal_autotrait_bound`
  --> $DIR/self-in-where-clause-allowed.rs:19:52
   |
LL |     fn nonlocal_autotrait_bound(&self) where Self: NonlocalAutoTrait {}
   |                                                    ^^^^^^^^^^^^^^^^^ required by this bound in `Trait::nonlocal_autotrait_bound`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
